--- a/AX Store/Info.plist
+++ b/AX Store/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Store</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -20,6 +22,29 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>允许此权限</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>允许此权限</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>允许此权限</string>
+	<key>NSCameraUsageDescription</key>
+	<string>允许此权限</string>
+	<key>NSContactsUsageDescription</key>
+	<string>允许此权限</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>允许此权限</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>允许此权限</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>AX Store需要您的同意才能读取媒体资料库</string>
+	<key>NSSiriUsageDescription</key>
+	<string>允许此权限</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -39,10 +64,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
 </dict>
 </plist>
